# jera-cloud-analyzer

./: .dockerignore  .env-example  .env.example  .gitignore  Dockerfile  README.md  cli.py  conftest.py  docker-build.sh  docker-compose.yml  env.example  install.sh  mcp-config.json  pyproject.toml  requirements.txt  run_mcp_server.py  setup.py  test_imports.py  test_mcp.py
.github/workflows/: docker-publish.yml
exemplos/: analise_performance_ec2.py  analise_tags.py  teste_conexao.py
src/: __init__.py  main.py
src/adapters/: __init__.py  haystack_tools.py
src/clouds/: __init__.py
src/clouds/aws/: __init__.py  client.py  cost_analyzer.py  cost_explorer.py  utils.py
src/clouds/aws/unused/: optimizer.py
src/ia/: README.md  agent.py  cost_analyzer.py  system_prompt.py
src/ia/tools/: README.md  README_CLOUDWATCH.md  __init__.py  aws_data_tools.py  aws_services_cache.json  cloudwatch_tools.py  service_resolver.py  service_tools.py  top_services.py  utility_tools.py
src/mcp/: server.py
