[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud-insights"
version = "1.0.0"
description = "Analisador de custos AWS com insights inteligentes"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["aws", "cost", "analysis", "cloud", "mcp"]
authors = [
  { name = "Jera", email = "dev@jera.com.br" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
]

dependencies = [
  "boto3>=1.34.0",
  "click>=8.1.0",
  "rich>=13.7.0",
  "python-dateutil>=2.8.2",
  "requests>=2.31.0",
  "pydantic>=2.5.0",
  "mcp[cli]>=1.0.0",
  "starlette>=0.37.0",
  "uvicorn>=0.24.0",
  "haystack-ai>=2.8.0",
  "openai>=1.0.0",
  "pandas>=1.5.0",
  "python-dotenv>=1.0.0",
  "fastapi>=0.100.0",
  "fastmcp>=2.6.1",
  "botocore>=1.38.28",
  "argparse>=1.4.0",
  "pathlib>=1.0.1",
  "numpy>=2.2.6",
  "urllib3>=2.4.0",
  "pyyaml>=6.0.2",
  "setuptools>=80.9.0",
  "wheel>=0.45.1",
  "diskcache>=5.6.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "black>=23.7.0",
  "isort>=5.12.0",
  "flake8>=6.0.0",
  "mypy>=1.5.0",
  "pre-commit>=3.3.0",
]

[project.urls]
Documentation = "https://github.com/jera/cloud-insights#readme"
Issues = "https://github.com/jera/cloud-insights/issues"
Source = "https://github.com/jera/cloud-insights"

[project.scripts]
cloud-insights = "src.main:main"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
target-version = ["py39"]
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
