[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud-insights"
version = "1.0.0"
description = "Analisador de custos AWS com insights inteligentes"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["aws", "cost", "analysis", "cloud", "mcp"]
authors = [
  { name = "Jera", email = "dev@jera.com.br" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Systems Administration",
]

dependencies = [
  # AWS & Cloud
  "boto3>=1.35.0",
  "botocore>=1.35.0",
  
  # FastAPI & Web
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "starlette>=0.40.0",
  
  # Data & Validation
  "pydantic>=2.8.0",
  "pandas>=2.0.0",
  
  # CLI & UI
  "click>=8.1.0",
  "rich>=13.7.0",
  
  # AI & ML
  "haystack-ai>=2.14.0",
  "openai>=1.30.0",
  
  # MCP & Communication
  "mcp>=1.0.0",
  "fastmcp>=2.6.1",
  
  # Utilities
  "python-dateutil>=2.8.0",
  "requests>=2.31.0",
  "python-dotenv>=1.0.0",
  "pyyaml>=6.0.0",
  "diskcache>=5.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "black>=24.0.0",
  "isort>=5.13.0",
  "flake8>=7.0.0",
  "mypy>=1.8.0",
  "pre-commit>=3.6.0",
]

# Dependências extras para funcionalidades específicas
ai = [
  "transformers>=4.40.0",
  "torch>=2.0.0",
]

all = [
  "cloud-insights[dev,ai]",
]

[project.urls]
Documentation = "https://github.com/jera/cloud-insights#readme"
Issues = "https://github.com/jera/cloud-insights/issues"
Source = "https://github.com/jera/cloud-insights"

[project.scripts]
cloud-insights = "src.main:main"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
target-version = ["py39"]
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
